test/Fail/CoinductiveBuiltinNatural.err
CoinductiveBuiltinNatural.agda:11.21-22: error: [UnequalTerms]
ℕ !=< ∞ ℕ
when checking that the expression suc has type ℕ → ℕ
